# VRP-MAHM

./: .gitignore  README.md  experiment_results.csv  prompt.txt  pyproject.toml  results.csv  run.py  run_all_instances.py  run_experiment.py  run_experiment_big_instance.py  run_multi_agent.py  run_single_agent.py  single_agent.mas2j
agents/: agent.asl  agent_beliefs.py  agent_cycle.py  main.py
agents/actions/ils/: ils.py  perturbation.py
agents/actions/vnd/: vnd.py
agents/actions/vnd/neighborhoods/: swap.py  two_opt.py
agents/actions/vns/: vns.py
agents/methods/: decision_method.py  path_relinking.py
agents/problem/: evaluator.py
agents/shared/: blackboard.py
agents/tests/: result_test_path_relinking.txt  result_test_vnd.txt  test_ils.py  test_path_relinking.py  test_vnd.py  test_vns.py
agents/utils/: load_instance.py  logger.py
big_instances/: 100.json  101.json  61.json
instances/: 1.json  102.json  150.json  20.json  21.json  22.json  35.json  36.json  37.json  50.json  51.json  52.json  60.json  62.json  99.json
src/: agent_beliefs.py  agent_cycle.py  main.py
src/actions/ils/: ils.py  perturbation.py
src/actions/vnd/: vnd.py
src/actions/vnd/neighborhoods/: swap.py
src/actions/vns/: __init__.py  vns.py
src/methods/: decision_method.py  path_relinking.py
src/shared/: blackboard.py
src/tests/: result_test_ils.txt  test_ils.py  test_path_relinking.py  test_vnd.py  test_vns.py
src/utils/: compute_route_cost.py  evaluation_counter.py  evaluator.py  feasibility.py  generate_random_feasible_route.py  logger.py
