[project]
name = "vrp-mahm"
version = "0.1.0"
description = ""
authors = [
    {name = "gustavojorge",email = "gustavo.jorge@jusbrasil.com.br"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "spade (>=4.1.2,<5.0.0)",
    "spade-bdi (>=0.3.2,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
